# rkyv_contrib

./: Cargo.toml  README.md
rkyv_wrappers/: Cargo.toml
rkyv_wrappers/src/: as_hashmap.rs  bitvec.rs  custom_phantom.rs  lib.rs  tests.rs
