[package]
name = "rkyv_wrappers"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { git = "https://github.com/djkoloski/rkyv.git", branch = "0.7.0" }
