[package]
name = "rkyv_wrappers"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = "0.7"
bitvec = { version = "1.0.1", optional = true }
bytecheck = { version = "~0.6.8", optional = true, default-features = false }

[features]
default = []
validation = ["rkyv/validation", "bytecheck"]
